Fixed the exit stage of this animation for the demo. No longer has a jarring jump.

--- a/scss/modules/captions.css.scss
+++ b/scss/modules/captions.css.scss
@@ -69,9 +69,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
     transition: none;
     z-index: 0;
+  }
+ .effeckt-figcaption-wrap {
+    position: absolute;
+    bottom: 1rem;
   }
   img {
     position: relative;
@@ -80,10 +83,6 @@
   &:hover, &:active {
     figcaption {
       opacity: 1;
-    }
-    .effeckt-figcaption-wrap {
-      position: absolute;
-      bottom: 1rem;
     }
     img {
       transform: scale(0.5) translateY(-80px);
